Minor lints and fixes